CHANGES FROM 3.1 TO 3.2

* Add a -s flag to copy-mode to specify a different pane for the source
  content. This means it is possible to view two places in a pane's history at
  the same time in different panes, or view the history while still using the
  pane. Pressing r refreshes the content from the source pane.

* Add an argument to list-commands to show only a single command.

* Change copy mode to make copy of the pane history so it does not need to
  freeze the pane.

* Restore pane_current_path format from portable tmux on OpenBSD.

* Wait until the initial command sequence is done before sending a device
  attributes request and other bits that prompt a reply from the terminal. This
  means that stray relies are not left on the terminal if the command has
  attached and then immediately detached and tmux will not be around to receive
  them.

* Add a -f filter argument to the list commands like choose-tree.

* Move specific hooks for panes to pane options and windows for window options
  rather than all hooks being session options. These hooks are now window options:

  window-layout-changed
  window-linked
  window-pane-changed
  window-renamed
  window-unlinked

  And these now pane options:

  pane-died
  pane-exited
  pane-focus-in
  pane-focus-out
  pane-mode-changed
  pane-set-clipboard

  Any existing configurations using these hooks on a session rather than
  globally (that is, set-hook or set-option without -g) may need to be changed.

* Show signal names when a process exits with remain-on-exit on platforms which
  have a way to get them.

* Start menu with top item selected if no mouse and use mode-style for the
  selected item.

* Add a copy-command option and change copy-pipe and friends to pipe to it if
  used without arguments, allows all the default copy key bindings to be
  changed to pipe with one option rather than needing to change each key
  binding individually.

* Tidy up the terminal detection and feature code and add named sets of